--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,24 @@
-DEBUG=true
+###############################
+# Exemplo de variáveis (.env) #
+###############################
+
+# Modo e segurança
+DEBUG=false
+SECRET_KEY=troque_esta_chave_segura
+ALLOWED_HOSTS=*
 LOG_REGISTER=false
+
+# Seleção de banco (1=SQLite interno, 2=PostgreSQL)
+BANCO_SELECIONADO=1
+
+# Ajustes JWT opcionais
+JWT_ACCESS_MINUTES=60
+JWT_REFRESH_DAYS=1
+
+# Configurações Postgres (use BANCO_SELECIONADO=2 para ativar)
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME_POSTGRE=database
+DB_USER_POSTGRE=user
+DB_PASSWORD_POSTGRE=password
+DB_HOST_POSTGRE=db
+DB_PORT_POSTGRE=5432
