--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+staticfiles/
 
 # Translations
 *.mo
@@ -81,6 +82,8 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+
+.idea/
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
