--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
      "type": "debugpy",
      "request": "launch",
      "program": "${workspaceFolder}\\manage.py",
-     "args": ["runserver"],
+     "args": ["runserver", "3031"],
      "django": true,
      "justMyCode": true
     }
