Refactor Docker setup and simplify static/media config
Updated Dockerfile to remove entrypoint script and use gunicorn directly as the default command. Cleaned up docker-compose.yml to match new container setup and removed unnecessary volumes. Simplified Django settings by removing dynamic directory creation for templates and static files, and adjusted static/media configuration. Deleted entrypoint.sh as it is no longer needed.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 # Modo e segurança
 DEBUG=false
-SECRET_KEY=troque_esta_chave_segura
+SECRET_KEY=django-insecure-dv^hp3l!uj2%g6+s*^=@lp-@i!9kj-5!#l!7uf&-nu*1r6un1u
 ALLOWED_HOSTS=*
 LOG_REGISTER=false
 
