--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,17 @@
-version: '3.9'
+version: "3.9"
+
 services:
-  web:
+  django:
+    container_name: django_app
     build: .
-    container_name: django_api_web
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:3050
     ports:
       - "3050:3050"
     env_file:
       - .env
-    volumes:
-      - .:/app
-      - static_volume:/app/staticfiles
     networks:
       - mynet
-    restart: unless-stopped
-
-volumes:
-  static_volume:
-
 
 networks:
   mynet:
-    external:
-      name: mynet
+    external: true
