Adicionar entrypoint do Docker e melhorar a configuração de implantaçã
Introduz o entrypoint.sh para aguardar o banco de dados, executar migrações e criar o superusuário. Atualiza o Dockerfile para usar o entrypoint, refatora as variáveis de ambiente no .env.example e no settings.py, e adiciona o serviço de banco de dados apropriado ao docker-compose.yml. Aprimora a automação e a confiabilidade da implantação para Django e PostgreSQL.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 # Modo e segurança
 DEBUG=false
-SECRET_KEY=django-insecure-dv^hp3l!uj2%g6+s*^=@lp-@i!9kj-5!#l!7uf&-nu*1r6un1u
+SECRET_KEY=django-insecure-dv^hp3l!uj2%g6+s*^=@lp-@i!9kj-5!
 ALLOWED_HOSTS=*
 LOG_REGISTER=false
 
@@ -16,9 +16,12 @@ JWT_ACCESS_MINUTES=60
 JWT_REFRESH_DAYS=1
 
 # Configurações Postgres (use BANCO_SELECIONADO=2 para ativar)
-DB_ENGINE=django.db.backends.postgresql
-DB_NAME_POSTGRE=database
-DB_USER_POSTGRE=user
-DB_PASSWORD_POSTGRE=password
-DB_HOST_POSTGRE=db
-DB_PORT_POSTGRE=5432
+DB_NAME=backend
+DB_USER=admin
+DB_PASSWORD=skmfwfem
+DB_HOST=db
+DB_PORT=5432
+
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@email.com
+DJANGO_SUPERUSER_PASSWORD=admin123
