--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,13 @@ services:
       POSTGRES_DB: backend
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: skmfwfem
+      TZ: America/Sao_Paulo
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
     networks:
       - mynet
 
@@ -22,6 +25,8 @@ services:
       - "3050:3050"
     env_file:
       - .env
+    environment:
+      TZ: America/Sao_Paulo
     depends_on:
       - db
     networks:
