Reestrutura o projeto e adiciona um proxy reverso com Nginx
Moveu todos os arquivos da aplicação para um novo diretório “backend” e atualizou o Dockerfile, o entrypoint e as configurações para uso de variáveis de ambiente. Adicionou um serviço Nginx com configuração personalizada para arquivos estáticos e de mídia, atualizou o docker-compose para um setup com múltiplos containers e removeu o arquivo de compose legado. Melhorou as configurações do Docker e do Django para preparo em produção e gerenciamento de arquivos estáticos e de mídia.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,8 @@ services:
   db:
     image: postgres:16
     container_name: postgres_db
-    environment:
-      POSTGRES_DB: backend
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: skmfwfem
-      TZ: America/Sao_Paulo
-    ports:
-      - "5432:5432"
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
@@ -18,22 +13,38 @@ services:
     networks:
       - mynet
 
-  django:
-    container_name: django_app
-    build: .
-    ports:
-      - "3050:3050"
+  backend:
+    container_name: backend
+    build: ./backend
     env_file:
       - .env
     environment:
       TZ: America/Sao_Paulo
+    volumes:
+      - static_data:/vol/web/static
+      - media_data:/vol/web/media
     depends_on:
       - db
+    expose:
+      - "8000"
+    networks:
+      - mynet
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:80"
+    volumes:
+      - static_data:/vol/web/static
+      - media_data:/vol/web/media
+    depends_on:
+      - backend
     networks:
       - mynet
 
 volumes:
   postgres_data:
+  static_data:
+  media_data:
 
 networks:
   mynet:
