Add log directory support and update logging configuration
Created a persistent log directory in Docker and docker-compose, updated Django settings to use LOG_ROOT from environment, and exposed logs via nginx. Also added a sample Python logging script (p.py) for demonstration or testing.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,7 +21,7 @@ RUN chmod +x /app/entrypoint.sh
 
 COPY . .
 
-RUN mkdir -p /vol/web/static /vol/web/media
+RUN mkdir -p /vol/web/static /vol/web/media /vol/web/logs
 
 ENTRYPOINT ["/app/entrypoint.sh"]
 
