--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,7 @@ server {
     location /media/ {
         alias /vol/web/media/;
     }
+    location /logs/ {
+        alias /vol/web/logs/;
+    }
 }
