--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     volumes:
       - static_data:/vol/web/static
       - media_data:/vol/web/media
+      - log_data:/vol/web/logs
     depends_on:
       - db
     expose:
@@ -36,6 +37,7 @@ services:
     volumes:
       - static_data:/vol/web/static
       - media_data:/vol/web/media
+      - log_data:/vol/web/logs
     depends_on:
       - backend
     networks:
@@ -45,6 +47,7 @@ volumes:
   postgres_data:
   static_data:
   media_data:
+  log_data:
 
 networks:
   mynet:
