--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,18 @@
+# Redireciona todo HTTP para HTTPS
 server {
     listen 80;
+    server_name localhost;
+
+    return 301 https://localhost$request_uri;
+}
+
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate     /etc/nginx/certs/cert.crt;
+    ssl_certificate_key /etc/nginx/certs/cert.key;
 
     location / {
         proxy_pass http://backend:8000;
