--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:1.25-alpine
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+RUN mkdir -p /etc/nginx/certs
+
+COPY ./cert/* /etc/nginx/certs
