Refatora as configurações do Docker, Django e Nginx para arquivos estáticos e de mídia
Remove o volume e o diretório de arquivos estáticos do Docker e do docker-compose, alterando o Django para usar um diretório local de staticfiles para o collectstatic. Atualiza o tratamento de variáveis de ambiente nas configurações do Django para maior robustez. Adiciona certificado e chave SSL para o Nginx e atualiza a configuração do Nginx para usar os novos arquivos de certificado, removendo o alias de arquivos estáticos.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,7 +29,7 @@ RUN chmod +x /app/entrypoint.sh
 
 COPY . .
 
-RUN mkdir -p /vol/web/static /vol/web/media /vol/web/logs
+RUN mkdir -p /vol/web/media /vol/web/logs
 
 ENTRYPOINT ["/app/entrypoint.sh"]
 
