--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,8 +11,8 @@ server {
     listen 443 ssl;
     server_name localhost;
 
-    ssl_certificate     /etc/nginx/certs/cert.crt;
-    ssl_certificate_key /etc/nginx/certs/cert.key;
+    ssl_certificate     /etc/nginx/certs/django_backend.crt;
+    ssl_certificate_key /etc/nginx/certs/django_backend.key;
 
     location / {
         proxy_pass http://backend:8000;
@@ -22,11 +22,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    location /static/ {
-        alias /vol/web/static/;
-    }
-
     location /media/ {
         alias /vol/web/media/;
     }
